--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Grid</title>
+    <title>响应式设计简易指南</title>
     <meta name="description" content="A simple guide to responsive design.">
 
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/grid.css">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="grid.css">
     <!--[if lt IE 9]>
       <script src="/js/html5shiv.js"></script>
     <![endif]-->
@@ -25,8 +25,8 @@
     <header class="clearfix">
       <div class="container">
         <div class="intro">
-          <a href="/grid"><h1>grid</h1></a>
-          <p>A simple guide to responsive design.<br>Made by <a href="/" target="_blank">Adam Kaplan</a>.</p>
+          <a href="http://www.geekplux.com/grid"><h1>grid</h1></a>
+          <p>响应式设计简易指南<br>Made by <a href="http://www.adamkaplan.me/" target="_blank">Adam Kaplan</a>.  译者 <a href="http://www.geekplux.com" target="_blank">GeekPlux</a></p>
         </div>
         <img src="/images/mobile.png" alt="Intro" class="mobile animated fadeInUp">
       </div>
@@ -35,9 +35,8 @@
     <section>
       <div class="container">
         <img src="/images/mobile-first.png" alt="Mobile First" class="rwd">
-        <h1>Why bother with responsive?</h1>
-        <p>We want our websites to be useable on all devices by responding to
-        the user’s behavior, screen size and screen orientation.</p>
+        <h1>为什么要使用响应式设计？</h1>
+        <p>哥想让哥的网站通过响应用户的行为、设备的屏幕大小和屏幕方向，从而在所有设备上都能用。</p>
       </div>
     </section>
 
@@ -47,24 +46,18 @@
 
     <section>
       <div class="container">
-        <h1>A Fragmented World</h1>
-        <p><a href="http://opensignal.com/reports/fragmentation-2013/" target="_blank">As of 2013</a>, there are thousands
-        of different devices and screen sizes that browse the internet, so it’s impossible to design layouts to target them
-        all. Instead, we must take a more fluid approach to design.</p>
+        <h1>一个碎片化的世界</h1>
+        <p><a href="http://opensignal.com/reports/fragmentation-2013/" target="_blank">截止2013年</a>，有成千上万种不同的设备在浏览网页，所以哥不可能设计出适应所有屏幕大小的网页。相反，哥必须得采用一种更加流畅的方式去设计。</p>
       </div>
     </section>
 
     <section>
       <div class="container">
-        <h1>Mobile First</h1>
-        <p>The term “mobile first” gets thrown around a lot lately. What it really means is to start with mobile
-        styles and layer on styles optimized for larger screens only as needed. In other words, your mobile styles become
-        the default and you no longer have to override them later. It’s much simpler!</p>
+        <h1>移动优先</h1>
+        <p>最近一个比较火的词叫移动优先。它的意思是，哥先为移动端设计样式，然后再根据需求去优化更大屏幕的样式。换句话说，假如哥把移动端样式当成网站的默认样式，且以后不用去优化它，一步到位。那哥就太省事了！</p>
         <hr>
         <blockquote>
-          <p>By assuming a flexible but simple layout by default, you can better guard against browsers—with viewports wide
-          and small—that aren’t quite capable of the full responsive layout. So when we’re talking about layout, “mobile first”
-          really means “progressive enhancement.”</p>
+          <p>”假定默认使用一个灵活但简单的布局，你的确可以适配各种浏览器，但这还不算是完全做到了响应式布局。所以当我们谈论「移动优先」，实际上是在说「渐进增强」。“</p>
           <cite>—Ethan Marcotte</cite>
         </blockquote>
       </div>
@@ -78,10 +71,8 @@
 
     <section>
       <div class="container">
-        <h1>Min-width Media Queries</h1>
-        <p>Introduce layout-specific rules only when you need them. Use <code>min-width</code> to layer complexity on your
-        layout as the viewport widens. It’s easier to have all the media queries nearby, rather than at the end
-        of the stylesheet or in a separate document.</p>
+        <h1>用 Min-width 进行媒体查询（ Media Queries ）</h1>
+        <p>现在哥来介绍一种特别的布局方式。 通过 <code>min-width</code> 来界定不同屏幕该如何布局。它能就近检测出不同设备的屏幕大小（即 media queries，可直译为<b>媒体查询</b>），比在样式表末尾或一个单独文件中处理更简单。</p>
         <hr>
         <script src="https://gist.github.com/aekaplan/8969695.js"></script>
       </div>
@@ -90,10 +81,8 @@
     <section>
       <div class="container">
         <div class="circle">1</div>
-        <h1>Not All Browsers are Created Equal</h1>
-        <p>Browsers will render your CSS differently. To avoid this, it’s a good idea to use a modern
-        alternative to a reset like <a href="http://necolas.github.io/normalize.css/" target="_blank">Normalize.css</a>,
-        which will render elements more consistently cross-browser. Remember to include it as-is before your stylesheet.</p>
+        <h1>不是所有浏览器生而平等</h1>
+        <p>同一份 CSS，不同浏览器渲染出来的效果不一样。为了避免出现这种情况，你可以使用类似 <a href="http://necolas.github.io/normalize.css/" target="_blank">Normalize.css</a> 这种更好的 CSS 来帮助你实现跨浏览器显示。当然，你要把这份CSS放在你样式表最前面。</p>
         <hr>
         <script src="https://gist.github.com/aekaplan/8969436.js"></script>
       </div>
@@ -102,8 +91,8 @@
     <section>
       <div class="container">
         <div class="circle">2</div>
-        <h1>Add the Viewport Meta Tag</h1>
-        <p>Place in the <code>&lt;head&gt;</code> of your HTML. This enables use of media queries for cross-device layouts.</p>
+        <h1>在 Viewport 里加 Meta 标签</h1>
+        <p>在你 HTML 的<code>&lt;head&gt;</code> 代码里添加 Meta 标签。它可以使 media queries 在不同设备上起作用</p>
         <hr>
         <script src="https://gist.github.com/aekaplan/8243831.js"></script>
       </div>
@@ -117,34 +106,33 @@
 
     <section>
       <div class="container">
-        <h1>CSS Box Model</h1>
-        <p>It’s important to understand the basics, like how elements are generated and behave in the browser, before
-        diving into responsive web design. The CSS Box Model consists of four distinct parts.</p>
+        <h1>CSS 盒模型</h1>
+        <p>基础很重要！在深入响应式设计之前，最好把像 HTML 元素如何在浏览器中生成并渲染这类知识搞清楚。CSS 盒模型由以下四部分组成。</p>
         <hr>
 
         <div class="row clearfix">
           <div class="column fourth">
             <img src="/images/content.png" alt="content">
-            <h3 class="content">Content</h3>
-            <p>The content of the box, where text and images appear.</p>
+            <h3 class="content">内容 Content</h3>
+            <p>盒子中的内容，可以是文本也可以是图片等。</p>
           </div>
 
           <div class="column fourth">
             <img src="/images/padding.png" alt="padding">
-            <h3 class="padding">Padding</h3>
-            <p>Clears an area around the content.</p>
+            <h3 class="padding">内边距 Padding</h3>
+            <p>内容外围的一圈空白。</p>
           </div>
 
           <div class="column fourth">
             <img src="/images/border.png" alt="border">
-            <h3 class="border">Border</h3>
-            <p>A border that goes around the padding.</p>
+            <h3 class="border">边框 Border</h3>
+            <p>内边距外围的一条边框。</p>
           </div>
 
           <div class="column fourth">
             <img src="/images/margin.png" alt="margin">
-            <h3 class="margin">Margin</h3>
-            <p>Clears an area around the border.</p>
+            <h3 class="margin">外边距 Margin</h3>
+            <p>边框外围的一圈空白。</p>
           </div>
         </div>
       </div>
@@ -153,8 +141,8 @@
     <section>
       <div class="container">
         <div class="circle">3</div>
-        <h1>Use box-sizing: border-box</h1>
-        <p>Place at the top of your <code>CSS</code> file. The <code>*</code> will target all elements on the page.</p>
+        <h1>设置 box-sizing: border-box</h1>
+        <p>在 <code>CSS</code> 文件最顶端设置 box-sizing。运用 <code>*</code> 通用选择器使其应用到页面的每个元素上。</p>
         <hr>
         <script src="https://gist.github.com/aekaplan/8247563.js"></script>
       </div>
@@ -162,23 +150,21 @@
 
     <section>
       <div class="container">
-        <h1>Your Choice</h1>
-        <p><a href="http://en.wikipedia.org/wiki/Internet_Explorer_box_model_bug" target="_blank">What was once a bug</a>
-        is now a widely used CSS property. It basically means you can choose whether or not to include borders and padding in
-        the width of your content.</p>
+        <h1>你的选择</h1>
+        <p>CSS 有个<a href="http://en.wikipedia.org/wiki/Internet_Explorer_box_model_bug" target="_blank">常见 BUG</a>。是否设置 box-sizing，将意味着 border 和 padding 的值是否计算在 width 之内。</p>
         <hr>
 
         <div class="row clearfix">
           <div class="column half">
             <img src="/images/without-box-model.png" alt="Without Box Model">
-            <h3>Without box-sizing: border-box</h3>
-            <p>Margin, borders and padding are drawn outside the set width of your content.</p>
+            <h3>没有设置 box-sizing: border-box</h3>
+            <p>Margin, borders and padding 均不包含在内容宽度之内。</p>
           </div>
 
           <div class="column half">
             <img src="/images/with-box-model.png" alt="With Box Model">
-            <h3>With box-sizing: border-box</h3>
-            <p>Borders and padding are drawn inside the set width of your content. The margin is drawn outside.</p>
+            <h3>设置了 box-sizing: border-box</h3>
+            <p>Borders and padding 均包含在内容宽度之内。margin 在外单独计算。</p>
           </div>
         </div>
       </div>
@@ -187,9 +173,8 @@
     <section>
       <div class="container">
         <div class="circle">4</div>
-        <h1>Create a Container</h1>
-        <p>A container holds all elements and controls the page’s maximum width. Using a container will make designing for
-        responsive easier!</p>
+        <h1>创建容器</h1>
+        <p>一个容器将包含页面所有标签，并控制页面最大宽度. 运用容器，让我们的响应式设计更进了一步！</p>
         <hr>
         <script src="https://gist.github.com/aekaplan/8246124.js"></script>
         <script src="https://gist.github.com/aekaplan/8246032.js"></script>
@@ -205,9 +190,8 @@
     <section>
       <div class="container">
         <div class="circle">5</div>
-        <h1>Create a Column</h1>
-        <p>With mobile first, columns are <code>block</code> level (takes up the full width available) by default. No
-        additional styles needed!</p>
+        <h1>创建列</h1>
+        <p>在移动优先里，列默认均是 <code>block</code> 级别的（可以占满整行的宽度）。不需要额外的样式！</p>
         <hr>
         <script src="https://gist.github.com/aekaplan/8978649.js"></script>
       </div>
@@ -236,9 +220,8 @@
     <section>
       <div class="container">
         <div class="circle">6</div>
-        <h1>Create Column Sizes</h1>
-        <p>On larger screens, columns gain <code>float: left</code> in order to stack content horizontally. Columns now
-        use padding for gutters, so you no longer need to worry about removing margins.</p>
+        <h1>创建列宽</h1>
+        <p>在大屏中，用 <code>float: left</code> 将列水平排列。然后运用 padding 设置相邻两列之间的间隙，忘掉传统的margin吧。</p>
         <hr>
       </div>
 
@@ -325,10 +308,10 @@
     <section>
       <div class="container">
         <div class="circle">7</div>
-        <h1>Create Rows</h1>
-        <p>Columns are wrapped in rows to prevent other elements from stacking next to them, otherwise known as clearing
-        issues. Rows are cleared using the popular <code>clearfix</code>, which was created by
-        <a href="http://nicolasgallagher.com/micro-clearfix-hack/" target="_blank">Nicolas Gallagher</a>.</p>
+        <h1>创建行</h1>
+        <p>列应该包裹在行内，以避免其他元素堆放在其旁边造成布局混乱。否则就会出现广为人知的 clearing 问题。出现之后可以使用由
+          <a href="http://nicolasgallagher.com/micro-clearfix-hack/" target="_blank">Nicolas Gallagher</a>
+          发明的 <code>clearfix</code> 解决。</p>
         <hr>
         <script src="https://gist.github.com/aekaplan/8430571.js"></script>
         <script src="https://gist.github.com/aekaplan/8467436.js"></script>
@@ -361,9 +344,8 @@
 
     <section>
       <div class="container">
-        <h1>Flow Opposite</h1>
-        <p>Add the class <code>.flow-opposite</code> to columns where you want content to display first on mobile but
-        appear on the right on larger screens.</p>
+        <h1>相对流（ Flow Opposite ）</h1>
+        <p>给你想让它在移动端优先显示，而在大屏幕中右侧显示的列，添加 <code>.flow-opposite</code> 类。</p>
         <hr>
         <script src="https://gist.github.com/aekaplan/9025378.js"></script>
         <script src="https://gist.github.com/aekaplan/9025387.js"></script>
@@ -386,12 +368,10 @@
 
     <section>
       <div class="container">
-        <h1>Practice Makes Perfect</h1>
-        <p>By following these simple steps, you are on the path to responsive
-        web design mastery. Keep practicing and help make the web a better,
-        more useable place.</p>
+        <h1>熟能生巧</h1>
+        <p>通过这些简单的步骤，你已经走上了响应式设计之路。坚持练习，会让你的网页更好更实用。</p>
         <hr>
-        <p><a href="https://github.com/aekaplan/grid" target="_blank" class="button">View the Code</a></p>
+        <p><a href="https://github.com/aekaplan/grid" target="_blank" class="button">查看源码</a></p>
       </div>
     </section>
 
@@ -399,7 +379,7 @@
       <div class="container">
         <div class="row clearfix">
           <div class="column half">
-            <h3>Further Reading</h3>
+            <h3>延伸阅读</h3>
             <hr class="small">
             <ul>
               <li><a href="http://www.abookapart.com/products/mobile-first" target="_blank">A Book Apart: Mobile First</a></li>
@@ -413,7 +393,7 @@
           </div>
 
           <div class="column half">
-            <h3>References</h3>
+            <h3>参考文献</h3>
             <hr class="small">
             <ul>
               <li><a href="http://opensignal.com/reports/fragmentation-2013/" target="_blank">Android Fragmentation Visualized</a></li>
