fix pic display
fix pic display

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
           <a href="http://www.geekplux.com/grid"><h1>grid</h1></a>
           <p>响应式设计简易指南<br>Made by <a href="http://www.adamkaplan.me/" target="_blank">Adam Kaplan</a>.  译者 <a href="http://www.geekplux.com" target="_blank">GeekPlux</a></p>
         </div>
-        <img src="/images/mobile.png" alt="Intro" class="mobile animated fadeInUp">
+        <img src="images/mobile.png" alt="Intro" class="mobile animated fadeInUp">
       </div>
     </header>
 
     <section>
       <div class="container">
-        <img src="/images/mobile-first.png" alt="Mobile First" class="rwd">
+        <img src="images/mobile-first.png" alt="Mobile First" class="rwd">
         <h1>为什么要使用响应式设计？</h1>
         <p>哥想让哥的网站通过响应用户的行为、设备的屏幕大小和屏幕方向，从而在所有设备上都能用。</p>
       </div>
@@ -65,7 +65,7 @@
 
     <section class="example quote remove-padding">
       <div class="container">
-        <img src="/images/small-large.png" alt="Mobile First">
+        <img src="images/small-large.png" alt="Mobile First">
       </div>
     </section>
 
@@ -100,7 +100,7 @@
 
     <section class="example">
       <div class="container">
-        <img src="/images/box-model.png" alt="Box Model">
+        <img src="images/box-model.png" alt="Box Model">
       </div>
     </section>
 
@@ -112,25 +112,25 @@
 
         <div class="row clearfix">
           <div class="column fourth">
-            <img src="/images/content.png" alt="content">
+            <img src="images/content.png" alt="content">
             <h3 class="content">内容 Content</h3>
             <p>盒子中的内容，可以是文本也可以是图片等。</p>
           </div>
 
           <div class="column fourth">
-            <img src="/images/padding.png" alt="padding">
+            <img src="images/padding.png" alt="padding">
             <h3 class="padding">内边距 Padding</h3>
             <p>内容外围的一圈空白。</p>
           </div>
 
           <div class="column fourth">
-            <img src="/images/border.png" alt="border">
+            <img src="images/border.png" alt="border">
             <h3 class="border">边框 Border</h3>
             <p>内边距外围的一条边框。</p>
           </div>
 
           <div class="column fourth">
-            <img src="/images/margin.png" alt="margin">
+            <img src="images/margin.png" alt="margin">
             <h3 class="margin">外边距 Margin</h3>
             <p>边框外围的一圈空白。</p>
           </div>
@@ -156,13 +156,13 @@
 
         <div class="row clearfix">
           <div class="column half">
-            <img src="/images/without-box-model.png" alt="Without Box Model">
+            <img src="images/without-box-model.png" alt="Without Box Model">
             <h3>没有设置 box-sizing: border-box</h3>
             <p>Margin, borders and padding 均不包含在内容宽度之内。</p>
           </div>
 
           <div class="column half">
-            <img src="/images/with-box-model.png" alt="With Box Model">
+            <img src="images/with-box-model.png" alt="With Box Model">
             <h3>设置了 box-sizing: border-box</h3>
             <p>Borders and padding 均包含在内容宽度之内。margin 在外单独计算。</p>
           </div>
@@ -183,7 +183,7 @@
 
     <section class="example">
       <div class="container">
-        <img src="/images/container.png" alt="Container">
+        <img src="images/container.png" alt="Container">
       </div>
     </section>
 
