--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
           <a href="http://www.geekplux.com/grid"><h1>grid</h1></a>
           <p>响应式设计简易指南<br>Made by <a href="http://www.adamkaplan.me/" target="_blank">Adam Kaplan</a>.  译者 <a href="http://www.geekplux.com" target="_blank">GeekPlux</a></p>
         </div>
-        <img src="/images/mobile.png" alt="Intro" class="mobile animated fadeInUp">
+        <img src="images/mobile.png" alt="Intro" class="mobile animated fadeInUp">
       </div>
     </header>
 
     <section>
       <div class="container">
-        <img src="/images/mobile-first.png" alt="Mobile First" class="rwd">
+        <img src="images/mobile-first.png" alt="Mobile First" class="rwd">
         <h1>为什么要使用响应式设计？</h1>
-        <p>哥想让哥的网站通过响应用户的行为、设备的屏幕大小和屏幕方向，从而在所有设备上都能用。</p>
+        <p>我们想让我们的网站通过响应用户的行为、设备的屏幕大小和屏幕方向，从而在所有设备上都能用。</p>
       </div>
     </section>
 
@@ -47,14 +47,14 @@
     <section>
       <div class="container">
         <h1>一个碎片化的世界</h1>
-        <p><a href="http://opensignal.com/reports/fragmentation-2013/" target="_blank">截止2013年</a>，有成千上万种不同的设备在浏览网页，所以哥不可能设计出适应所有屏幕大小的网页。相反，哥必须得采用一种更加流畅的方式去设计。</p>
+        <p><a href="http://opensignal.com/reports/fragmentation-2013/" target="_blank">截止2013年</a>，有成千上万种不同的设备在浏览网页，所以我们不可能设计出适应所有屏幕大小的网页。相反，我们必须得采用一种更加流畅的方式去设计。</p>
       </div>
     </section>
 
     <section>
       <div class="container">
         <h1>移动优先</h1>
-        <p>最近一个比较火的词叫移动优先。它的意思是，哥先为移动端设计样式，然后再根据需求去优化更大屏幕的样式。换句话说，假如哥把移动端样式当成网站的默认样式，且以后不用去优化它，一步到位。那哥就太省事了！</p>
+        <p>最近一个比较火的词叫移动优先。它的意思是，先为移动端设计样式，然后再根据需求去优化更大屏幕的样式。换句话说，假如你把移动端样式当成网站的默认样式，且以后不用去优化它，一步到位。那就更省事了！</p>
         <hr>
         <blockquote>
           <p>”假定默认使用一个灵活但简单的布局，你的确可以适配各种浏览器，但这还不算是完全做到了响应式布局。所以当我们谈论「移动优先」，实际上是在说「渐进增强」。“</p>
@@ -65,14 +65,14 @@
 
     <section class="example quote remove-padding">
       <div class="container">
-        <img src="/images/small-large.png" alt="Mobile First">
+        <img src="images/small-large.png" alt="Mobile First">
       </div>
     </section>
 
     <section>
       <div class="container">
         <h1>用 Min-width 进行媒体查询（ Media Queries ）</h1>
-        <p>现在哥来介绍一种特别的布局方式。 通过 <code>min-width</code> 来界定不同屏幕该如何布局。它能就近检测出不同设备的屏幕大小（即 media queries，可直译为<b>媒体查询</b>），比在样式表末尾或一个单独文件中处理更简单。</p>
+        <p>现在来介绍一种特别的布局方式。 通过 <code>min-width</code> 来界定不同屏幕该如何布局。它能就近检测出不同设备的屏幕大小（即 media queries，可直译为<b>媒体查询</b>），比在样式表末尾或一个单独文件中处理更简单。</p>
         <hr>
         <script src="https://gist.github.com/aekaplan/8969695.js"></script>
       </div>
@@ -100,7 +100,7 @@
 
     <section class="example">
       <div class="container">
-        <img src="/images/box-model.png" alt="Box Model">
+        <img src="images/box-model.png" alt="Box Model">
       </div>
     </section>
 
@@ -112,25 +112,25 @@
 
         <div class="row clearfix">
           <div class="column fourth">
-            <img src="/images/content.png" alt="content">
+            <img src="images/content.png" alt="content">
             <h3 class="content">内容 Content</h3>
             <p>盒子中的内容，可以是文本也可以是图片等。</p>
           </div>
 
           <div class="column fourth">
-            <img src="/images/padding.png" alt="padding">
+            <img src="images/padding.png" alt="padding">
             <h3 class="padding">内边距 Padding</h3>
             <p>内容外围的一圈空白。</p>
           </div>
 
           <div class="column fourth">
-            <img src="/images/border.png" alt="border">
+            <img src="images/border.png" alt="border">
             <h3 class="border">边框 Border</h3>
             <p>内边距外围的一条边框。</p>
           </div>
 
           <div class="column fourth">
-            <img src="/images/margin.png" alt="margin">
+            <img src="images/margin.png" alt="margin">
             <h3 class="margin">外边距 Margin</h3>
             <p>边框外围的一圈空白。</p>
           </div>
@@ -156,13 +156,13 @@
 
         <div class="row clearfix">
           <div class="column half">
-            <img src="/images/without-box-model.png" alt="Without Box Model">
+            <img src="images/without-box-model.png" alt="Without Box Model">
             <h3>没有设置 box-sizing: border-box</h3>
             <p>Margin, borders and padding 均不包含在内容宽度之内。</p>
           </div>
 
           <div class="column half">
-            <img src="/images/with-box-model.png" alt="With Box Model">
+            <img src="images/with-box-model.png" alt="With Box Model">
             <h3>设置了 box-sizing: border-box</h3>
             <p>Borders and padding 均包含在内容宽度之内。margin 在外单独计算。</p>
           </div>
@@ -183,7 +183,7 @@
 
     <section class="example">
       <div class="container">
-        <img src="/images/container.png" alt="Container">
+        <img src="images/container.png" alt="Container">
       </div>
     </section>
 
