Modify some wording
Modify some wording

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="container">
         <img src="images/mobile-first.png" alt="Mobile First" class="rwd">
         <h1>为什么要使用响应式设计？</h1>
-        <p>哥想让哥的网站通过响应用户的行为、设备的屏幕大小和屏幕方向，从而在所有设备上都能用。</p>
+        <p>我们想让我们的网站通过响应用户的行为、设备的屏幕大小和屏幕方向，从而在所有设备上都能用。</p>
       </div>
     </section>
 
@@ -47,14 +47,14 @@
     <section>
       <div class="container">
         <h1>一个碎片化的世界</h1>
-        <p><a href="http://opensignal.com/reports/fragmentation-2013/" target="_blank">截止2013年</a>，有成千上万种不同的设备在浏览网页，所以哥不可能设计出适应所有屏幕大小的网页。相反，哥必须得采用一种更加流畅的方式去设计。</p>
+        <p><a href="http://opensignal.com/reports/fragmentation-2013/" target="_blank">截止2013年</a>，有成千上万种不同的设备在浏览网页，所以我们不可能设计出适应所有屏幕大小的网页。相反，我们必须得采用一种更加流畅的方式去设计。</p>
       </div>
     </section>
 
     <section>
       <div class="container">
         <h1>移动优先</h1>
-        <p>最近一个比较火的词叫移动优先。它的意思是，哥先为移动端设计样式，然后再根据需求去优化更大屏幕的样式。换句话说，假如哥把移动端样式当成网站的默认样式，且以后不用去优化它，一步到位。那哥就太省事了！</p>
+        <p>最近一个比较火的词叫移动优先。它的意思是，先为移动端设计样式，然后再根据需求去优化更大屏幕的样式。换句话说，假如你把移动端样式当成网站的默认样式，且以后不用去优化它，一步到位。那就更省事了！</p>
         <hr>
         <blockquote>
           <p>”假定默认使用一个灵活但简单的布局，你的确可以适配各种浏览器，但这还不算是完全做到了响应式布局。所以当我们谈论「移动优先」，实际上是在说「渐进增强」。“</p>
@@ -72,7 +72,7 @@
     <section>
       <div class="container">
         <h1>用 Min-width 进行媒体查询（ Media Queries ）</h1>
-        <p>现在哥来介绍一种特别的布局方式。 通过 <code>min-width</code> 来界定不同屏幕该如何布局。它能就近检测出不同设备的屏幕大小（即 media queries，可直译为<b>媒体查询</b>），比在样式表末尾或一个单独文件中处理更简单。</p>
+        <p>现在来介绍一种特别的布局方式。 通过 <code>min-width</code> 来界定不同屏幕该如何布局。它能就近检测出不同设备的屏幕大小（即 media queries，可直译为<b>媒体查询</b>），比在样式表末尾或一个单独文件中处理更简单。</p>
         <hr>
         <script src="https://gist.github.com/aekaplan/8969695.js"></script>
       </div>
