--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         <h1>熟能生巧</h1>
         <p>通过这些简单的步骤，你已经走上了响应式设计之路。坚持练习，会让你的网页更好更实用。</p>
         <hr>
-        <p><a href="https://github.com/aekaplan/grid" target="_blank" class="button">查看源码</a></p>
+        <p><a href="http://geekplux.github.io/grid" target="_blank" class="button">查看源码</a></p>
       </div>
     </section>
 
