--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <![endif]-->
 
     <!-- Google Fonts -->
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
   </head>
 
   <body>
